--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,8 @@
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
         © 2020 Copyright:
-        <a class="text-white" href="#">transauto.com</a>
+        <a class="text-white" href="#">transauto.com</a> | 
+        <a class="text-white" href="mailto:stephenbrooks714@gmail.com">Developer Contact</a>
       </div>
       <!-- Copyright -->
     </footer>
